<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">"Add to cart            $%1$s"</string>
    <string name="gb">%1$s gb</string>
</resources>